<?xml version="1.0" encoding="utf-8"?>
<resources >

    <string name="app_name">FlyControl</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="fps">FPS</string>
    <string name="axis_format">(%1$.2f, %2$.2f)</string>
    <string name="camera_width">Camera Width:</string>
    <string name="camera_height">Camera Height:</string>
    <string name="text_info">Display QuadCopter status</string>
    <string name="ctrl_v_pos">Position:</string>
    <string name="ctrl_margin">Margin:</string>
    <string name="update_freq">Update Freq:</string>
    <string name="lock_attitude">Lock Attitude</string>
    <string name="left_throttle">Left throttle</string>
    <string name="attitude_sensitivity">Sensitivity:</string>
    <string name="param_setting">Param setting</string>
    <string name="quit">Quit</string>
    <string name="view_setting">View Setting</string>
    <string name="commnunication_setting">Communicate Setting</string>
    <string name="control_setting">Control Setting</string>
    <string name="quad_setting">QuadCopter Setting</string>
    <string name="net_setting">Net Setting</string>
    <string name="net_connect_fail">Net connection fail!</string>
    <string name="ip_address">IP Address:</string>
    <string name="ip_port">Port:</string>
    <string name="conenct_to_server">Connect to server</string>
    <string name="button_setting">Button Setting</string>
    <string name="button">Button</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_x">Pos X</string>
    <string name="btn_y">Pos Y</string>
    <string name="btn_name">Name</string>
    <string name="btn_adj_pos">Adjust position</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_ready">Ready</string>
    <string name="axis_left_x">Left X</string>
    <string name="axis_left_y">Left Y</string>
    <string name="axis_right_x">Right X</string>
    <string name="axis_right_y">Right Y</string>
    <string name="axis_scale">Scale</string>
    <string name="axis_offset">Offet</string>
    <string name="axis_name">Axis</string>
    <string name="axis_setting">Axis setting</string>
    <string name="blue_setting">Bluetooth</string>
    <string name="blue_address">MAC address</string>
    <string name="blue_name">Device name</string>
    <string name="blue_connect">Connect</string>
    <string name="blue_not_valid">Bluetooth is not available!</string>
    <string name="blue_search">Scan</string>
    <string name="blue_paired_device">Paired devices</string>
    <string name="blue_new_device">New devices</string>
    <string name="blue_pair">Pair</string>
    
    <string name="quad_about">About QuadCopter</string>
    <string name="quad_param">QuadCopter param</string>
    <string name="quad_sensor">Sensor</string>
    <string name="quad_pid">PID</string>
    <string name="quad_pid_x">X(Roll)</string>
    <string name="quad_pid_y">Y(Pitch)</string>
    <string name="quad_pid_z">Z(Yaw)</string>
    <string name="quad_pid_param">PID param</string>
    <string name="quad_pid_p">P</string>
    <string name="quad_pid_i">I</string>
    <string name="quad_pid_d">D</string>
    <string name="quad_horizon">Horizon</string>
    <string name="quad_horizon_w">W</string>
    <string name="quad_horizon_x">X</string>
    <string name="quad_horizon_y">Y</string>
    <string name="quad_horizon_z">Z</string>
    <string name="quad_sensor_cal">Calibration</string>
    <string name="quad_sensor_x">X</string>
    <string name="quad_sensor_y">Y</string>
    <string name="quad_sensor_z">Z</string>
    <string name="quad_acc_offset">Acc Off</string>
    <string name="quad_acc_gain">Acc Gain</string>
    <string name="quad_gyro_offset">Gyro Off</string>
    <string name="quad_gyro_gain">Gyro Gain</string>
    <string name="quad_mag_offset">Mag Off</string>
    <string name="quad_mag_gain">Mag Gain</string>
    <string name="quad_get_ram">Read RAM</string>
    <string name="quad_set_ram">Write RAM</string>
    <string name="quad_get_flash">Read Flash</string>
    <string name="quad_set_flash">Write Flash</string>
    <string name="quad_reset_flash">Reset Flash</string>
    <string name="quad_com_timeout">Communication timeout!</string>
    <string name="quad_com_data_error">Communication data error!</string>
    <string name="quad_com_sucess">Communication success!</string>
    <string name="quad_com_start">Communication start >>></string>
    <string name="quad_com_status">Status:  </string>
    <string name="quad_param_x_fill">Horizontal extend</string>
    <string name="quad_param_y_fill">Vertical extend</string>
    <string name="quad_param_row_copy">Row Copy</string>
    <string name="quad_param_row_paste">Row Paste</string>
    <string name="quad_confirm_write_flash">Are you sure want to write flash parameter?</string>
    <string name="quad_confirm_reset_flash">Are you sure want to reset flash parameter?</string>
    <string name="quad_gather">Gather data</string>
    <string name="quad_gather_data">Data</string>
    <string name="quad_gather_data_source">Data source:</string>
    <string name="quad_gather_sample_count">Sample count:</string>
    <string name="quad_gather_sample_interval">Sample interval(ms):</string>
    <string name="quad_gather_sample_once">Sample one time</string>
    <string name="quad_gather_sample_more">Sample multiple time</string>
    <string name="quad_gather_select_type">Select data type</string>
    <string name="quad_gather_unknown_data">Unknown Data</string>
    
    <string name="quad_bootloader">Bootloader</string>
    <string name="quad_bootloader_bin_url">URL:</string>
    <string name="quad_bootloader_bin_downlaod">Download firmware</string>
    <string name="quad_bootloader_bin_path">Path:</string>
    <string name="quad_bootloader_bin_update">Update local firmware</string>
    <string name="quad_bootloader_bin_update_url">Update remote firmware</string>
    <string name="quad_bootloader_file_not_exsit">File not exsit, download it first!</string>
    <string name="quad_bootloader_file_create_fail">Fail to create file!</string>
    <string name="quad_bootloader_download_start">File download start >>></string>
    <string name="quad_bootloader_download_success">Firmware download success!</string>
    <string name="quad_bootloader_update_start">Firmware update start >>></string>
    <string name="quad_bootloader_update_load_file_success">Firmware load success!</string>
    <string name="quad_bootloader_update_load_file_fail">Load firmware fail!</string>
    <string name="quad_bootloader_status_ready">Enter bootloader mode!</string>
    <string name="quad_bootloader_status_app_ready">Bootloader is ready for update firmware!</string>
    <string name="quad_bootloader_status_app_write">Start writing firmware!</string>
    <string name="quad_bootloader_status_app_success">Firmware update success, entering new firmware!</string>
    <string name="quad_bootloader_status_app_fail">Firmware update fail, please try again!</string>
    <string name="quad_bootloader_status_user_cancel_update">Firmware update cancel by user!</string>
    <string name="quad_bootloader_status_user_cancel_download">Firmware download cancel by user!</string>
    <string name="quad_swtich_status">Show/Hide Status</string>
    <string name="quad_status_duration">Status Interval(ms):</string>
    
    <string name="blue_no_device_paired">No devices have been paired!</string>
    <string name="blue_no_device_found">No devices found!</string>
    <string name="blue_connect_fail">Bluetooth connection fail!</string>
    <string name="touch_both">MultiTouch detected, Both controls will work properly!</string>
    <string name="touch_single">MultiTouch detected, but your device has problems distinguishing between fingers.\n\nControls are placed at different vertical locations.</string>
	<string name="touch_none">Sorry your device does NOT support MultiTouch!\n\n(Falling back to SingleTouch.)\n\nControls are placed at different vertical locations.</string>
	<string name="menu_about">About</string>
	<string name="about_flycontrol">About Fly Control</string>
	<string name="about_legal_line1">lxyppc All rights reserved.</string>
	<string name="about_legal_line2">Not liable for any damage incurred from use of this software.</string>
	<string name="about_legal_line3">This program is distributed in the hope that it will be useful,</string>
	<string name="about_legal_line4">but WITHOUT ANY WARRANTY; without even the implied warranty of</string> 
	<string name="about_legal_line5">MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.</string>
	
	<string name="info_verion">Version: </string>
	<string name="info_verion_num">0.1</string>
	<string name="info_copyright">Copyright 2013</string>
	<string name="info_link">http://goo.gl/JVVX6</string>
	<string name="info_mail">lxyppc@gmail.com</string>
	
	<string name="menu_help">Help</string>
	
	<string-array name="quad_sensor_param_head">
	   	<item>Cal value</item>
    	<item>X</item>
    	<item>Y</item>
    	<item>Z</item>
	</string-array>
	
	<string-array name="quad_sensor_param_names">
	    <item>Acc Off</item>
	    <item>Acc Gain</item>
	    <item>Gyro Off</item>
	    <item>Gyro Gain</item>
	    <item>Mag Off</item>
	    <item>Mag Gain</item>
	</string-array>
	
	<string-array name="quad_horizon_param_head">
	    <item>Horizon</item>
    	<item>W</item>
    	<item>X</item>
    	<item>Y</item>
    	<item>Z</item>
    </string-array>
    
	<string-array name="quad_horizon_param_names">
	    <item>Horizon</item>
    </string-array>

	<string-array name="quad_pid_param_head">
	    <item>PID param</item>
    	<item>P</item>
    	<item>I</item>
    	<item>D</item>
    </string-array>
    
	<string-array name="quad_pid_param_names">
	    <item>X(Roll)</item>
	    <item>Y(Pitch)</item>
	    <item>Z(Yaw)</item>
    </string-array>
    
	<string-array name="quad_gather_data_head">
	    <item> </item>
    	<item>X</item>
    	<item>Y</item>
    	<item>Z</item>
    </string-array>
    
	<string-array name="quad_gather_data_names">
	    <item>Data</item>
    </string-array>
    
	<string-array name="quad_gather_data_types">
	    <item>Raw Acc</item>
	    <item>Calibrated Acc</item>
	    <item>Raw Gyro</item>
	    <item>Calibrated Gyro</item>
	    <item>Raw Mag</item>
	    <item>Calibrated Mag</item>
    </string-array>
    
	<string-array name="quad_status_names">
	    <item>Voltage:</item>
	    <item>Motor1:</item>
	    <item>Motor2:</item>
	    <item>Motor3:</item>
	    <item>Motor4:</item>
    </string-array>
</resources>
